--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
          <!---THE END--->
          <section class="end">
             <div class="last-text">
-                <p>Copyright © 2023 by Chikh abdelaziz "crow designer" all rights reserved</p>
+                <p>Copyright © 2023 by Chikh abdelaziz "cosmos designer" all rights reserved</p>
             </div>
             <div class="top">
                 <a href="#home"><i class='bx bxs-up-arrow'></i></a>
